# market-predictor

backend/: config.yaml  market_predictor_gbm.pkl  market_predictor_lstm_model.h5  market_predictor_lstm_model.keras  pyproject.toml  requirements.txt
backend/api/: app.py
backend/data/: AAPL_daily_live.csv  AAPL_historical_prices.csv  AAPL_intraday_1m.csv  AAPL_stats_by_trend.csv  AAPL_stats_by_vol.csv  AMD_daily_live.csv  AMD_historical_prices.csv  AMD_intraday_1m.csv  AMD_stats_by_trend.csv  AMD_stats_by_vol.csv  AMZN_daily_live.csv  AMZN_historical_prices.csv  AMZN_intraday_1m.csv  AMZN_stats_by_trend.csv  AMZN_stats_by_vol.csv  GOOGL_daily_live.csv  GOOGL_historical_prices.csv  GOOGL_intraday_1m.csv  GOOGL_stats_by_trend.csv  GOOGL_stats_by_vol.csv  KO_daily_live.csv  KO_historical_prices.csv  KO_intraday_1m.csv  KO_stats_by_trend.csv  KO_stats_by_vol.csv  MSFT_daily_live.csv  MSFT_historical_prices.csv  MSFT_intraday_1m.csv  MSFT_stats_by_trend.csv  MSFT_stats_by_vol.csv  NVDA_daily_live.csv  NVDA_historical_prices.csv  NVDA_intraday_1m.csv  NVDA_stats_by_trend.csv  NVDA_stats_by_vol.csv  TSLA_daily_live.csv  TSLA_historical_prices.csv  TSLA_intraday_1m.csv  TSLA_stats_by_trend.csv  TSLA_stats_by_vol.csv  (+12 more)
backend/models/: lstm_up_1d.keras  nextclose_AAPL.keras  nextclose_AAPL_features.json  nextclose_AAPL_scaler.pkl  nextclose_AMD.keras  nextclose_AMD_features.json  nextclose_AMD_scaler.pkl  nextclose_AMZN.keras  nextclose_AMZN_features.json  nextclose_AMZN_scaler.pkl  nextclose_GOOGL.keras  nextclose_GOOGL_features.json  nextclose_GOOGL_scaler.pkl  (+20 more)
(+82 files in other folders)
